whiledb/parser.output
State 62 conflicts: 1 reduce/reduce
State 90 conflicts: 1 reduce/reduce


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: NT_CMD TM_SEMICOL NT_CMD
    3       | TM_VAR TM_INTTYPE NT_DECL_RIGHT_EXPR
    4       | NT_EXPR TM_ASGNOP NT_EXPR
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    7       | TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    8       | TM_FOR TM_LEFT_PAREN NT_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_CMD TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    9       | TM_LOCAL TM_VAR TM_IN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   10       | TM_CONTINUE
   11       | TM_BREAK
   12       | TM_RETURN
   13       | NT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   14       | NT_EXPR TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN

   15 NT_EXPR0: TM_NAT
   16         | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   17         | TM_IDENT

   18 NT_EXPR1: TM_NOT NT_EXPR
   19         | NT_EXPR0

   20 NT_EXPR: NT_EXPR1
   21        | TM_MINUS NT_EXPR
   22        | TM_MUL NT_EXPR
   23        | TM_ADDROF NT_EXPR
   24        | NT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   25        | NT_EXPR TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   26        | NT_EXPR TM_MUL NT_EXPR
   27        | NT_EXPR TM_PLUS NT_EXPR
   28        | NT_EXPR TM_MINUS NT_EXPR
   29        | NT_EXPR TM_DIV NT_EXPR
   30        | NT_EXPR TM_MOD NT_EXPR
   31        | NT_EXPR TM_LT NT_EXPR
   32        | NT_EXPR TM_GT NT_EXPR
   33        | NT_EXPR TM_LE NT_EXPR
   34        | NT_EXPR TM_GE NT_EXPR
   35        | NT_EXPR TM_EQ NT_EXPR
   36        | NT_EXPR TM_NE NT_EXPR
   37        | NT_EXPR TM_AND NT_EXPR
   38        | NT_EXPR TM_OR NT_EXPR

   39 NT_DECL_RIGHT_EXPR: TM_IDENT
   40                   | TM_MUL NT_DECL_RIGHT_EXPR
   41                   | NT_DECL_RIGHT_EXPR TM_LEFT_PAREN NT_DECL_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   42                   | NT_DECL_RIGHT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   43                   | TM_LEFT_PAREN NT_DECL_RIGHT_EXPR TM_RIGHT_PAREN

   44 NT_DECL_ARGUMENT_TYPE_LIST: TM_INTTYPE NT_ANNON_RIGHT_EXPR TM_COMMA NT_DECL_ARGUMENT_TYPE_LIST
   45                           | TM_INTTYPE NT_ANNON_RIGHT_EXPR
   46                           | TM_INTTYPE
   47                           | TM_INTTYPE TM_COMMA NT_DECL_ARGUMENT_TYPE_LIST

   48 NT_ANNON_RIGHT_EXPR: TM_MUL
   49                    | TM_LEFT_PAREN TM_RIGHT_PAREN
   50                    | TM_MUL NT_ANNON_RIGHT_EXPR
   51                    | NT_ANNON_RIGHT_EXPR TM_LEFT_PAREN TM_RIGHT_PAREN
   52                    | NT_ANNON_RIGHT_EXPR TM_LEFT_PAREN NT_DECL_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN
   53                    | TM_LEFT_PAREN NT_ANNON_RIGHT_EXPR TM_RIGHT_PAREN
   54                    | TM_LEFT_PAREN NT_DECL_ARGUMENT_TYPE_LIST TM_RIGHT_PAREN

   55 NT_EXPR_TYPE_LIST: NT_EXPR TM_COMMA NT_EXPR_TYPE_LIST
   56                  | NT_EXPR


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 15
TM_IDENT (259) 17 39
TM_LEFT_BRACE (260) 5 6 7 8 9
TM_RIGHT_BRACE (261) 5 6 7 8 9
TM_LEFT_PAREN (262) 6 7 8 13 14 16 24 25 41 42 43 49 51 52 53 54
TM_RIGHT_PAREN (263) 6 7 8 13 14 16 24 25 41 42 43 49 51 52 53 54
TM_SEMICOL (264) 2 8
TM_COMMA (265) 44 47 55
TM_VAR (266) 3 9
TM_INTTYPE (267) 3 44 45 46 47
TM_IF (268) 5
TM_THEN (269) 5
TM_ELSE (270) 5
TM_WHILE (271) 6 7
TM_DO (272) 6 7
TM_FOR (273) 8
TM_LOCAL (274) 9
TM_IN (275) 9
TM_CONTINUE (276) 10
TM_BREAK (277) 11
TM_RETURN (278) 12
TM_ASGNOP (279) 4
TM_OR (280) 38
TM_AND (281) 37
TM_NOT (282) 18
TM_LT (283) 31
TM_LE (284) 33
TM_GT (285) 32
TM_GE (286) 34
TM_EQ (287) 35
TM_NE (288) 36
TM_PLUS (289) 27
TM_MINUS (290) 21 28
TM_MUL (291) 22 26 40 48 50
TM_DIV (292) 29
TM_MOD (293) 30
TM_UMINUS (294)
TM_DEREF (295)
TM_ADDROF (296) 23


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
NT_WHOLE (43)
    on left: 1, on right: 0
NT_CMD (44)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14, on right: 1 2 5 6 7 8
    9
NT_EXPR0 (45)
    on left: 15 16 17, on right: 19
NT_EXPR1 (46)
    on left: 18 19, on right: 20
NT_EXPR (47)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38, on right: 4 5 6 7 8 13 14 16 18 21 22 23 24 25 26 27 28 29
    30 31 32 33 34 35 36 37 38 55 56
NT_DECL_RIGHT_EXPR (48)
    on left: 39 40 41 42 43, on right: 3 40 41 42 43
NT_DECL_ARGUMENT_TYPE_LIST (49)
    on left: 44 45 46 47, on right: 41 44 47 52 54
NT_ANNON_RIGHT_EXPR (50)
    on left: 48 49 50 51 52 53 54, on right: 44 45 50 51 52 53
NT_EXPR_TYPE_LIST (51)
    on left: 55 56, on right: 14 25 55


state 0

    0 $accept: . NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_VAR         shift, and go to state 4
    TM_IF          shift, and go to state 5
    TM_WHILE       shift, and go to state 6
    TM_DO          shift, and go to state 7
    TM_FOR         shift, and go to state 8
    TM_LOCAL       shift, and go to state 9
    TM_CONTINUE    shift, and go to state 10
    TM_BREAK       shift, and go to state 11
    TM_RETURN      shift, and go to state 12
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_WHOLE  go to state 17
    NT_CMD    go to state 18
    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 21


state 1

   15 NT_EXPR0: TM_NAT .

    $default  reduce using rule 15 (NT_EXPR0)


state 2

   17 NT_EXPR0: TM_IDENT .

    $default  reduce using rule 17 (NT_EXPR0)


state 3

   16 NT_EXPR0: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 22


state 4

    3 NT_CMD: TM_VAR . TM_INTTYPE NT_DECL_RIGHT_EXPR

    TM_INTTYPE  shift, and go to state 23


state 5

    5 NT_CMD: TM_IF . NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 24


state 6

    6 NT_CMD: TM_WHILE . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 25


state 7

    7 NT_CMD: TM_DO . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_BRACE  shift, and go to state 26


state 8

    8 NT_CMD: TM_FOR . TM_LEFT_PAREN NT_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_CMD TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 27


state 9

    9 NT_CMD: TM_LOCAL . TM_VAR TM_IN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_VAR  shift, and go to state 28


state 10

   10 NT_CMD: TM_CONTINUE .

    $default  reduce using rule 10 (NT_CMD)


state 11

   11 NT_CMD: TM_BREAK .

    $default  reduce using rule 11 (NT_CMD)


state 12

   12 NT_CMD: TM_RETURN .

    $default  reduce using rule 12 (NT_CMD)


state 13

   18 NT_EXPR1: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 29


state 14

   21 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 30


state 15

   22 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 31


state 16

   23 NT_EXPR: TM_ADDROF . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 32


state 17

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 33


state 18

    1 NT_WHOLE: NT_CMD .
    2 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 34

    $default  reduce using rule 1 (NT_WHOLE)


state 19

   19 NT_EXPR1: NT_EXPR0 .

    $default  reduce using rule 19 (NT_EXPR1)


state 20

   20 NT_EXPR: NT_EXPR1 .

    $default  reduce using rule 20 (NT_EXPR)


state 21

    4 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   13       | NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   14       | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   24 NT_EXPR: NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   25        | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   26        | NT_EXPR . TM_MUL NT_EXPR
   27        | NT_EXPR . TM_PLUS NT_EXPR
   28        | NT_EXPR . TM_MINUS NT_EXPR
   29        | NT_EXPR . TM_DIV NT_EXPR
   30        | NT_EXPR . TM_MOD NT_EXPR
   31        | NT_EXPR . TM_LT NT_EXPR
   32        | NT_EXPR . TM_GT NT_EXPR
   33        | NT_EXPR . TM_LE NT_EXPR
   34        | NT_EXPR . TM_GE NT_EXPR
   35        | NT_EXPR . TM_EQ NT_EXPR
   36        | NT_EXPR . TM_NE NT_EXPR
   37        | NT_EXPR . TM_AND NT_EXPR
   38        | NT_EXPR . TM_OR NT_EXPR

    TM_LEFT_PAREN  shift, and go to state 35
    TM_ASGNOP      shift, and go to state 36
    TM_OR          shift, and go to state 37
    TM_AND         shift, and go to state 38
    TM_LT          shift, and go to state 39
    TM_LE          shift, and go to state 40
    TM_GT          shift, and go to state 41
    TM_GE          shift, and go to state 42
    TM_EQ          shift, and go to state 43
    TM_NE          shift, and go to state 44
    TM_PLUS        shift, and go to state 45
    TM_MINUS       shift, and go to state 46
    TM_MUL         shift, and go to state 47
    TM_DIV         shift, and go to state 48
    TM_MOD         shift, and go to state 49


state 22

   16 NT_EXPR0: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   24 NT_EXPR: NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   25        | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   26        | NT_EXPR . TM_MUL NT_EXPR
   27        | NT_EXPR . TM_PLUS NT_EXPR
   28        | NT_EXPR . TM_MINUS NT_EXPR
   29        | NT_EXPR . TM_DIV NT_EXPR
   30        | NT_EXPR . TM_MOD NT_EXPR
   31        | NT_EXPR . TM_LT NT_EXPR
   32        | NT_EXPR . TM_GT NT_EXPR
   33        | NT_EXPR . TM_LE NT_EXPR
   34        | NT_EXPR . TM_GE NT_EXPR
   35        | NT_EXPR . TM_EQ NT_EXPR
   36        | NT_EXPR . TM_NE NT_EXPR
   37        | NT_EXPR . TM_AND NT_EXPR
   38        | NT_EXPR . TM_OR NT_EXPR

    TM_LEFT_PAREN   shift, and go to state 50
    TM_RIGHT_PAREN  shift, and go to state 51
    TM_OR           shift, and go to state 37
    TM_AND          shift, and go to state 38
    TM_LT           shift, and go to state 39
    TM_LE           shift, and go to state 40
    TM_GT           shift, and go to state 41
    TM_GE           shift, and go to state 42
    TM_EQ           shift, and go to state 43
    TM_NE           shift, and go to state 44
    TM_PLUS         shift, and go to state 45
    TM_MINUS        shift, and go to state 46
    TM_MUL          shift, and go to state 47
    TM_DIV          shift, and go to state 48
    TM_MOD          shift, and go to state 49


state 23

    3 NT_CMD: TM_VAR TM_INTTYPE . NT_DECL_RIGHT_EXPR

    TM_IDENT       shift, and go to state 52
    TM_LEFT_PAREN  shift, and go to state 53
    TM_MUL         shift, and go to state 54

    NT_DECL_RIGHT_EXPR  go to state 55


state 24

    5 NT_CMD: TM_IF NT_EXPR . TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   24 NT_EXPR: NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   25        | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   26        | NT_EXPR . TM_MUL NT_EXPR
   27        | NT_EXPR . TM_PLUS NT_EXPR
   28        | NT_EXPR . TM_MINUS NT_EXPR
   29        | NT_EXPR . TM_DIV NT_EXPR
   30        | NT_EXPR . TM_MOD NT_EXPR
   31        | NT_EXPR . TM_LT NT_EXPR
   32        | NT_EXPR . TM_GT NT_EXPR
   33        | NT_EXPR . TM_LE NT_EXPR
   34        | NT_EXPR . TM_GE NT_EXPR
   35        | NT_EXPR . TM_EQ NT_EXPR
   36        | NT_EXPR . TM_NE NT_EXPR
   37        | NT_EXPR . TM_AND NT_EXPR
   38        | NT_EXPR . TM_OR NT_EXPR

    TM_LEFT_PAREN  shift, and go to state 50
    TM_THEN        shift, and go to state 56
    TM_OR          shift, and go to state 37
    TM_AND         shift, and go to state 38
    TM_LT          shift, and go to state 39
    TM_LE          shift, and go to state 40
    TM_GT          shift, and go to state 41
    TM_GE          shift, and go to state 42
    TM_EQ          shift, and go to state 43
    TM_NE          shift, and go to state 44
    TM_PLUS        shift, and go to state 45
    TM_MINUS       shift, and go to state 46
    TM_MUL         shift, and go to state 47
    TM_DIV         shift, and go to state 48
    TM_MOD         shift, and go to state 49


state 25

    6 NT_CMD: TM_WHILE TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 57


state 26

    7 NT_CMD: TM_DO TM_LEFT_BRACE . NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_VAR         shift, and go to state 4
    TM_IF          shift, and go to state 5
    TM_WHILE       shift, and go to state 6
    TM_DO          shift, and go to state 7
    TM_FOR         shift, and go to state 8
    TM_LOCAL       shift, and go to state 9
    TM_CONTINUE    shift, and go to state 10
    TM_BREAK       shift, and go to state 11
    TM_RETURN      shift, and go to state 12
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_CMD    go to state 58
    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 21


state 27

    8 NT_CMD: TM_FOR TM_LEFT_PAREN . NT_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_CMD TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_VAR         shift, and go to state 4
    TM_IF          shift, and go to state 5
    TM_WHILE       shift, and go to state 6
    TM_DO          shift, and go to state 7
    TM_FOR         shift, and go to state 8
    TM_LOCAL       shift, and go to state 9
    TM_CONTINUE    shift, and go to state 10
    TM_BREAK       shift, and go to state 11
    TM_RETURN      shift, and go to state 12
    TM_NOT         shift, and go to state 13
    TM_MINUS       shift, and go to state 14
    TM_MUL         shift, and go to state 15
    TM_ADDROF      shift, and go to state 16

    NT_CMD    go to state 59
    NT_EXPR0  go to state 19
    NT_EXPR1  go to state 20
    NT_EXPR   go to state 21


state 28

    9 NT_CMD: TM_LOCAL TM_VAR . TM_IN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IN  shift, and go to state 60


state 29

   18 NT_EXPR1: TM_NOT NT_EXPR .
   24 NT_EXPR: NT_EXPR . TM_LEFT_PAREN TM_RIGHT_PAREN
   25        | NT_EXPR . TM_LEFT_PAREN NT_EXPR_TYPE_LIST TM_RIGHT_PAREN
   26        | NT_EXPR . TM_MUL NT_EXPR
   27        | NT_EXPR . TM_PLUS NT_EXPR
   28        | NT_EXPR . TM_MINUS NT_EXPR
   29        | NT_EXPR . TM_DIV NT_EXPR
   30        | NT_EXPR . TM_MOD NT_EXPR
   31        | NT_EXPR . TM_LT NT_EXPR
   32        | NT_EXPR . TM_GT NT_EXPR
   33        | NT_EXPR . TM_LE NT_EXPR
   34        | NT_EXPR . TM_GE NT_EXPR
   35        | NT_EXPR . TM_EQ NT_EXPR
   36        | NT_EXPR . TM_NE NT_EXPR
   37        | NT_EXPR . TM_AND NT_EXPR
   38        | NT_EXPR . TM_OR NT_EXPR

    TM_LEFT_PAREN  shift, and go to state 50

    $default  reduce using rule 18 (NT_EXPR1)


state 30
